modularize domain decomposition
The domain decomposition, whereby cells were partitioned across domains/MPI
ranks and then grouped together, was performed in an ad-hoc manner.
This PR modularizes the domain decomposition.

* A `domain_decomposition` class performs the cell partitioning given the recipe
  and some parameters.
* This implementation has a single `domain_decomposition` class and flags are
  provided in a `group_rules` struct
  * The `domain_decomposition` could be specialized, or the simple rules struct
    could provide some sort of policy implementation in the future when the
    need arises
* The domain_decomposition class is initialized inside the model constructor
  and is maintained as state of the model.
  * In the future when the domain decomposition is responsible for load balancing
    and gid renumbering it will provided the translation between user and model
    gid numberings.
  * For this reason I have put it inside the model.
  * But I am open to discussion about whether domain decomposition ought to be
    performed before model creation.
* The cell model constructor interface has been simplified to a single constructor
  that takes a recipe and the `group_rules`.

--- a/tests/global_communication/CMakeLists.txt
+++ b/tests/global_communication/CMakeLists.txt
@@ -2,6 +2,7 @@ set(HEADERS
     ${PROJECT_SOURCE_DIR}/src/swcio.hpp
 )
 set(COMMUNICATION_SOURCES
+    test_domain_decomposition.cpp
     test_exporter_spike_file.cpp
     test_communicator.cpp
     test_mpi_gather_all.cpp
