--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ set(BASE_SOURCES
     common_types_io.cpp
     cell.cpp
     event_binner.cpp
+    model.cpp
     morphology.cpp
     parameter_list.cpp
     profiling/memory_meter.cpp
