refactor cell_group_factory

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(BASE_SOURCES
     common_types_io.cpp
     cell.cpp
+    cell_group_factory.cpp
     event_binner.cpp
     model.cpp
     morphology.cpp
