wip: compile cell group factory with cuda

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,11 @@ set(EXTERNAL_LIBRARIES "")
 set(EXTERNAL_INCLUDES "")
 
 #----------------------------------------------------------
+# list of libraries built inside NestMC
+#----------------------------------------------------------
+set(NESTMC_LIBRARIES "")
+
+#----------------------------------------------------------
 # Threading model selection
 #----------------------------------------------------------
 set(NMC_THREADING_MODEL "cthread" CACHE STRING "set the threading model, one of cthread/tbb/serial")
@@ -259,7 +264,10 @@ if(NOT use_external_modcc)
 endif()
 
 add_subdirectory(mechanisms)
+message("before src: ${NESTMC_LIBRARIES}")
 add_subdirectory(src)
+message("after  src: ${NESTMC_LIBRARIES}")
+
 add_subdirectory(tests)
 add_subdirectory(miniapp)
 add_subdirectory(lmorpho)
