--- a/miniapp/CMakeLists.txt
+++ b/miniapp/CMakeLists.txt
@@ -8,10 +8,10 @@ set(MINIAPP_SOURCES
 
 add_executable(miniapp.exe ${MINIAPP_SOURCES})
 
-target_link_libraries(miniapp.exe LINK_PUBLIC ${NESTMC_LIBRARIES})
+target_link_libraries(miniapp.exe LINK_PUBLIC ${ARB_LIBRARIES})
 target_link_libraries(miniapp.exe LINK_PUBLIC ${EXTERNAL_LIBRARIES})
 
-if(NMC_WITH_MPI)
+if(ARB_WITH_MPI)
     target_link_libraries(miniapp.exe LINK_PUBLIC ${MPI_C_LIBRARIES})
     set_property(TARGET miniapp.exe APPEND_STRING PROPERTY LINK_FLAGS "${MPI_C_LINK_FLAGS}")
 endif()
