--- a/tests/validation/CMakeLists.txt
+++ b/tests/validation/CMakeLists.txt
@@ -14,21 +14,21 @@ set(VALIDATION_SOURCES
     validate.cpp
 )
 
-if(NMC_VALIDATION_DATA_DIR)
+if(ARB_VALIDATION_DATA_DIR)
     if ("${CMAKE_VERSION}" MATCHES "^3.[789].")
-        message(WARNING "CMake ${CMAKE_VERSION} has broken FindCUDA; omitting NMC_DATADIR define.")
+        message(WARNING "CMake ${CMAKE_VERSION} has broken FindCUDA; omitting ARB_DATADIR define.")
     else()
-        add_definitions("-DNMC_DATADIR=\"${NMC_VALIDATION_DATA_DIR}\"")
+        add_definitions("-DARB_DATADIR=\"${ARB_VALIDATION_DATA_DIR}\"")
     endif()
 endif()
 
 add_executable(validate.exe ${VALIDATION_SOURCES})
 
 target_link_libraries(validate.exe LINK_PUBLIC gtest)
-target_link_libraries(validate.exe LINK_PUBLIC ${NESTMC_LIBRARIES})
+target_link_libraries(validate.exe LINK_PUBLIC ${ARB_LIBRARIES})
 target_link_libraries(validate.exe LINK_PUBLIC ${EXTERNAL_LIBRARIES})
 
-if(NMC_WITH_MPI)
+if(ARB_WITH_MPI)
     target_link_libraries(validate.exe LINK_PUBLIC ${MPI_C_LIBRARIES})
     set_property(TARGET validate.exe APPEND_STRING PROPERTY LINK_FLAGS "${MPI_C_LINK_FLAGS}")
 endif()
@@ -39,6 +39,6 @@ set_target_properties(
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/tests"
 )
 
-if(NMC_BUILD_VALIDATION_DATA)
+if(ARB_BUILD_VALIDATION_DATA)
     add_dependencies(validate.exe validation_data)
 endif()
